# insighthub/backend/src/routes/trending.routes.js
@@ -1,8 +1,14 @@
 import { Router } from 'express';
-import { getTrending } from '../controllers/news.controller.js';
+import {
+  getTrending,
+  getTrendingTopicsHandler,
+  getMostRead,
+} from '../controllers/news.controller.js';
 
 const router = Router();
 
+router.get('/topics', getTrendingTopicsHandler);
+router.get('/most-read', getMostRead);
 router.get('/', getTrending);
 
 export default router;
